--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,7 @@ Jean Flach <jean-marcel.flach@netways.de>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
 Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
+Joseph L. Casale <jcasale@activenetwerx.com>
 Lars Engels <lars.engels@0x20.net>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
 Marcus van Dam <marcus@marcusvandam.nl>
