--- a/doc/icinga2.8
+++ b/doc/icinga2.8
@@ -49,7 +49,7 @@ detach from the controlling terminal
 .SH "REPORTING BUGS"
 Report bugs at <https://dev.icinga.org/>
 .br
-Icinga home page: <http://www.icinga.org/>
+Icinga home page: <https://www.icinga.org/>
 .SH COPYRIGHT
 Copyright \(co 2012\-2014 Icinga Development Team (http://www.icinga.org)
 License GPLv2+: GNU GPL version 2 or later <http://gnu.org/licenses/gpl2.html>
