--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ Carlos Cesario <carloscesario@gmail.com>
 Christian Jonak <christian@jonak.org>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
+Edvin Seferovic <edvin@seferovic.net>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@netways.de>
@@ -28,6 +29,7 @@ Paul Richards <paul@minimoo.org>
 Phil Hutchinson <phil@volumedia.co.uk>
 Ricardo Bartels <ricardo@bitchbrothers.com>
 Sam Kottler <shk@linux.com>
+Stephan Platz <github@paalsteek.de>
 Steve McMaster <mcmaster@hurricanelabs.com>
 Tim Hardeck <thardeck@suse.de>
 Tobias von der Krone <tobias@vonderkrone.info>
