--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 Alexander Schomburg <script.acc@alex.schomb.org>
 Alexander Wirt <formorer@debian.org>
 Bernd Erk <bernd.erk@icinga.org>
+Blerim Sheqa <blerim.sheqa@netways.de>
 Brian Dockter <specus@gmail.com>
 Carlos Cesario <carloscesario@gmail.com>
 Christian Jonak <christian@jonak.org>
