--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
 Lars Engels <lars.engels@0x20.net>
+Louis Sautier <sautier.louis@gmail.com>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
 Marcus van Dam <marcus@marcusvandam.nl>
 Marius Sturm <marius@torch.sh>
