--- a/AUTHORS
+++ b/AUTHORS
@@ -30,6 +30,7 @@ Michael Friedrich <michael.friedrich@netways.de>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
 Phil Hutchinson <phil@volumedia.co.uk>
+Reto Zeder <reto.zeder@arcade.ch>
 Ricardo Bartels <ricardo@bitchbrothers.com>
 Sam Kottler <shk@linux.com>
 Stephan Platz <github@paalsteek.de>
