--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,7 @@ Malte Rabenseifner <mail@malte-rabenseifner.de>
 Marcus van Dam <marcus@marcusvandam.nl>
 Marius Sturm <marius@torch.sh>
 Markus Frosch <markus@lazyfrosch.de>
+Max Zhang <zhenzhan@tibco.com>
 Michael Friedrich <michael.friedrich@netways.de>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
