--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 Alexander Schomburg <script.acc@alex.schomb.org>
 Alexander Wirt <formorer@debian.org>
+Andrew Meyer <ameyer+secure@nodnetwork.org>
 Bernd Erk <bernd.erk@icinga.org>
 Blerim Sheqa <blerim.sheqa@netways.de>
 Brian Dockter <specus@gmail.com>
