--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@ Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
 Lars Engels <lars.engels@0x20.net>
+Lee Clemens <java@leeclemens.net>
 Lennart Betz <lennart.betz@netways.de>
 Louis Sautier <sautier.louis@gmail.com>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
