--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Edvin Seferovic <edvin@seferovic.net>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
+Élie Bouttier <elie@bouttier.eu>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@netways.de>
