--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ Christian Jonak <christian@jonak.org>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Edvin Seferovic <edvin@seferovic.net>
+Élie Bouttier <elie@bouttier.eu>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@netways.de>
