--- a/AUTHORS
+++ b/AUTHORS
@@ -9,7 +9,7 @@ Christian Jonak <christian@jonak.org>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Edvin Seferovic <edvin@seferovic.net>
-Élie Bouttier <elie@bouttier.eu>
+Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@netways.de>
@@ -45,3 +45,4 @@ Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Wolfgang Nieder <wnd@gmx.net>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
+Élie Bouttier <elie@bouttier.eu>
