--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,8 @@ Christian Jonak <christian@jonak.org>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Edvin Seferovic <edvin@seferovic.net>
+Élie Bouttier <elie@bouttier.eu>
+Eric Lippmann <eric.lippmann@netways.de>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
@@ -35,6 +37,7 @@ Michael Friedrich <michael.friedrich@netways.de>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
 Phil Hutchinson <phil@volumedia.co.uk>
+Ralph Breier <ralph.breier@roedl.com>
 Reto Zeder <reto.zeder@arcade.ch>
 Ricardo Bartels <ricardo@bitchbrothers.com>
 Sam Kottler <shk@linux.com>
@@ -45,4 +48,3 @@ Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Wolfgang Nieder <wnd@gmx.net>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
-Élie Bouttier <elie@bouttier.eu>
