--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ Michael Friedrich <michael.friedrich@netways.de>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
 Phil Hutchinson <phil@volumedia.co.uk>
+Ralph Breier <ralph.breier@roedl.com>
 Reto Zeder <reto.zeder@arcade.ch>
 Ricardo Bartels <ricardo@bitchbrothers.com>
 Sam Kottler <shk@linux.com>
