--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@ Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
 Jason Young <jyoung15@gmail.com>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
+Jesse Morgan <morgajel@gmail.com>
 Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
