Documentation: Fix typo in Configuration Best Practice
fixes #9268

Signed-off-by: Michael Friedrich <michael.friedrich@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Alexander A. Klimov <alexander.klimov@netways.de>
 Alexander Schomburg <script.acc@alex.schomb.org>
 Alexander Wirt <formorer@debian.org>
 Andrew Meyer <ameyer+secure@nodnetwork.org>
