Add System Requirements to Windows Agent Documentation
fixes #9180

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ Blerim Sheqa <blerim.sheqa@netways.de>
 Brian Dockter <specus@gmail.com>
 Carlos Cesario <carloscesario@gmail.com>
 Christian Jonak <christian@jonak.org>
+David Beck <techiscool@gmail.com>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Edvin Seferovic <edvin@seferovic.net>
