Fix wrong service table attributes in Livestatus documentation
Copy&paste error.

fixes #9390

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ Malte Rabenseifner <mail@malte-rabenseifner.de>
 Marcus van Dam <marcus@marcusvandam.nl>
 Marius Sturm <marius@torch.sh>
 Markus Frosch <markus@lazyfrosch.de>
+Martin Stiborsky <martin.stiborsky@gmail.com>
 Max Zhang <zhenzhan@tibco.com>
 Michael Friedrich <michael.friedrich@netways.de>
 Pall Sigurdsson <palli-github@minor.is>
