--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Alexander A. Klimov <alexander.klimov@netways.de>
+Alexander Fuhr <alexander.fuhr@netways.de>
 Alexander Schomburg <script.acc@alex.schomb.org>
 Alexander Wirt <formorer@debian.org>
 Andrew Meyer <ameyer+secure@nodnetwork.org>
