--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Blerim Sheqa <blerim.sheqa@netways.de>
 Brian Dockter <specus@gmail.com>
 Carlos Cesario <carloscesario@gmail.com>
 Christian Jonak <christian@jonak.org>
+Christian Lehmann <christian_lehmann@gmx.de>
 David Beck <techiscool@gmail.com>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
@@ -50,6 +51,7 @@ Stephan Platz <github@paalsteek.de>
 Steve McMaster <mcmaster@hurricanelabs.com>
 Tim Hardeck <thardeck@suse.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
+Tom Geissler <Tom@d7031.de>
 Wolfgang Nieder <wnd@gmx.net>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
