--- a/AUTHORS
+++ b/AUTHORS
@@ -48,6 +48,7 @@ Stephan Platz <github@paalsteek.de>
 Steve McMaster <mcmaster@hurricanelabs.com>
 Tim Hardeck <thardeck@suse.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
+Tom Geissler <Tom@d7031.de>
 Wolfgang Nieder <wnd@gmx.net>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
