--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Alexander Fuhr <alexander.fuhr@netways.de>
 Alexander Schomburg <script.acc@alex.schomb.org>
 Alexander Wirt <formorer@debian.org>
 Andrew Meyer <ameyer+secure@nodnetwork.org>
+Benedikt Heine <bebe@bebehei.de>
 Bernd Erk <bernd.erk@icinga.org>
 Blerim Sheqa <blerim.sheqa@netways.de>
 Brian Dockter <specus@gmail.com>
@@ -19,6 +20,7 @@ Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@netways.de>
+Ian Kelling <ian@iankelling.org>
 Ildar Hizbulin <hizel@vyborg.ru>
 James Pharaoh <james@pharaoh.uk>
 Jan Andres <jan.andres@berenberg.de>
