--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ David Beck <techiscool@gmail.com>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Edvin Seferovic <edvin@seferovic.net>
+Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@netways.de>
