--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Bernd Erk <bernd.erk@icinga.org>
 Blerim Sheqa <blerim.sheqa@netways.de>
 Brian Dockter <specus@gmail.com>
 Carlos Cesario <carloscesario@gmail.com>
+Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
 David Beck <techiscool@gmail.com>
