--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@ Carlos Cesario <carloscesario@gmail.com>
 Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
+Claudio Künzler <ck@claudiokuenzler.com>
 David Beck <techiscool@gmail.com>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
