--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,26 @@ Please check [doc/1-about.md].
 
 ## What's New
 
+### What's New in Version 2.3.7
+
+#### Changes
+
+* Bugfixes
+
+#### Features
+
+* Feature 9610: Enhance troubleshooting ssl errors & cluster replay log
+
+#### Bugfixes
+
+* Bug 9406: Selective cluster reconnecting breaks client communication
+* Bug 9535: Config parser ignores "ignore" in template definition
+* Bug 9584: Incorrect return value for the macro() function
+* Bug 9585: Wrong formatting in DB IDO extensions docs
+* Bug 9586: DB IDO: endpoint* tables are cleared on reload causing constraint violations
+* Bug 9621: Assertion failed in icinga::ScriptUtils::Intersection
+* Bug 9622: Missing lock in ScriptUtils::Union
+
 ### What's New in Version 2.3.6
 
 #### Changes
