--- a/AUTHORS
+++ b/AUTHORS
@@ -29,6 +29,7 @@ Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
 Jason Young <jyoung15@gmail.com>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
+Jérôme Drouet <jerome.drouet@gmail.com>
 Jesse Morgan <morgajel@gmail.com>
 Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
