--- a/AUTHORS
+++ b/AUTHORS
@@ -47,6 +47,7 @@ Max Zhang <zhenzhan@tibco.com>
 Michael Friedrich <michael.friedrich@netways.de>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
+Petr Ruzicka <petr.ruzicka@gmail.com>
 Phil Hutchinson <phil@volumedia.co.uk>
 Ralph Breier <ralph.breier@roedl.com>
 Reto Zeder <reto.zeder@arcade.ch>
