--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,20 @@ Please check [doc/1-about.md].
 
 ## What's New
 
+### What's New in Version 2.3.10
+
+#### Features
+
+* Feature 9218: Use the command_endpoint name as check_source value if defined
+
+#### Bugfixes
+
+* Bug 9244: String escape problem with PostgreSQL >= 9.1 and standard_conforming_strings=on
+* Bug 10003: Nested "outer" macro calls fails on (handled) missing "inner" values
+* Bug 10051: Missing fix for reload on Windows in 2.3.9
+* Bug 10058: Wrong calculation for host compat state "UNREACHABLE" in DB IDO
+* Bug 10074: Missing zero padding for generated CA serial.txt
+
 ### What's New in Version 2.3.9
 
 #### Changes
