--- a/AUTHORS
+++ b/AUTHORS
@@ -15,7 +15,6 @@ David Beck <techiscool@gmail.com>
 Dirk Goetz <dirk.goetz@netways.de>
 Dolf Schimmel <dolf@transip.nl>
 Edvin Seferovic <edvin@seferovic.net>
-Élie Bouttier <elie@bouttier.eu>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
@@ -27,11 +26,11 @@ Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
 Jason Young <jyoung15@gmail.com>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
-Jérôme Drouet <jerome.drouet@gmail.com>
 Jesse Morgan <morgajel@gmail.com>
 Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
+Jérôme Drouet <jerome.drouet@gmail.com>
 Lars Engels <lars.engels@0x20.net>
 Lee Clemens <java@leeclemens.net>
 Lennart Betz <lennart.betz@netways.de>
@@ -51,6 +50,7 @@ Ralph Breier <ralph.breier@roedl.com>
 Reto Zeder <reto.zeder@arcade.ch>
 Ricardo Bartels <ricardo@bitchbrothers.com>
 Sam Kottler <shk@linux.com>
+Sebastian Chrostek <sebastian@chrostek.net>
 Stephan Platz <github@paalsteek.de>
 Steve McMaster <mcmaster@hurricanelabs.com>
 Tim Hardeck <thardeck@suse.de>
@@ -59,3 +59,4 @@ Tom Geissler <Tom@d7031.de>
 Wolfgang Nieder <wnd@gmx.net>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
+Élie Bouttier <elie@bouttier.eu>
